added portfolio card components

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,6 +46,10 @@ Colors:
 /******************************/
 /*     01. General Styles     */
 /******************************/
+#root{
+	width:100%;
+	height:100%;
+}
 body,
 html {
     width: 100%;
