--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,4 +1,11 @@
 .portfolioDiv{
+    display: flex;
+    flex-wrap: nowrap;
     margin-top: 100px;
+    margin-bottom: 10px;
     width: 100%;
+}
+
+.portfolioCard{
+    margin-top: 20px;
 }
